hphp/test/slow/class-ptr/get-class-from-type-no-targs.php.expectf
Fatal error: get_class_from_type() expects exactly 1 type parameter, 0 given in %s/hphp/test/slow/class-ptr/get-class-from-type-no-targs.php on line 5
